# datasets-service

./: .dockerignore  .env.sample  .gitignore  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  rabbitmq.conf.sample
app/: Pipfile  config.py  dockerfile  main.py  models.py  pyproject.toml  worker.py
app/static/: styles.css
app/templates/: home.html  layout.html
project/: Dockerfile  Pipfile  main.py  models.py  test.py  worker.py
project/templates/: home.html  layout.html
worker/: Pipfile  celery_app.py  config.py  dockerfile  dockerfile.prod  ds_arrays.py  multisource.py  pyproject.toml  tasks.py  test.py  worker.py
