[tool.poetry]
name = "API"
version = "0.1.0"
description = "API web service"
authors = ["orl1k <orlov.dvi@gazprom-neft.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "==0.64.0"
uvicorn = "==0.13.4"
celery = "==4.4.7"
python-multipart = "==0.0.5"
aiofiles = "==0.6.0"
Jinja2 = "==2.11.3"
redis = "==3.5.3"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
