[tool.poetry]
name = "Celery Worker"
version = "0.1.0"
description = "Celery worker service for assembling datasets using scripts"
authors = ["orl1k <orlov.dvi@gazprom-neft.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
scipy = "*"
celery = "==4.4.7"
redis = "==3.5.3"
flower = "==0.9.7"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
